# aicms-claude-plugin

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
benchmark/: Cargo.toml  README.md  benchmark.toml
benchmark/corpus/implement/python/: order_service.toml
benchmark/corpus/implement/rust/: user_crud_service.toml
benchmark/prompts/: baseline.md  comparison.md
benchmark/src/: config.rs  lib.rs  main.rs  toolchain.rs
benchmark/src/corpus/: loader.rs  mod.rs  task.rs
benchmark/src/evaluator/: annotation_scorer.rs  claude_scorer.rs  code_extractor.rs  compiler.rs  linter_adapter.rs  mod.rs  test_runner.rs
benchmark/src/metrics/: aggregator.rs  mod.rs  types.rs
benchmark/src/report/: charts.rs  json_report.rs  markdown_report.rs  mod.rs
benchmark/src/runner/: claude_code_client.rs  client.rs  executor.rs  mod.rs  rate_limiter.rs
commands/: contracts.md  infer.md
doc/: ROADMAP.md
examples/python/: examples.py
examples/rust/: examples.rs
examples/typescript/: examples.ts
hooks/: hooks.json
integrations/github-action/: README.md  action.yml
integrations/github-action/examples/: basic-lint.yml  full-validation.yml
parser/: Cargo.toml
parser/src/: annotation.rs  diff.rs  error.rs  extractor.rs  language.rs  lib.rs  linter.rs  main.rs  output.rs  parser.rs
skills/aicms/: SKILL.md
templates/: CLAUDE.md.template  hooks.json
templates/commands/: aicms-diff.md  aicms-implement.md  aicms-tests.md
