[package]
name = "aicms-bench"
version = "0.1.0"
edition = "2021"
description = "AICMS benchmark system for measuring annotation effectiveness"
authors = ["AICMS Project"]

[[bin]]
name = "aicms-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3"
tempfile = "3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
