[package]
name = "aicms"
version = "0.1.0"
edition = "2021"
description = "AICMS parser and linter for CI/CD integration"
license = "MIT"
repository = "https://github.com/your-org/aicms"
keywords = ["ai", "annotations", "linter", "code-quality"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "aicms"
path = "src/main.rs"

[lib]
name = "aicms_parser"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
thiserror = "1"
colored = "2"

[dev-dependencies]
tempfile = "3"
